@@ -1,5 +1,7 @@
 package com.tinkerpop.pipes.filter;
 
+import com.tinkerpop.pipes.util.structures.AsMap;
+
 import java.util.Collection;
 
 /**
@@ -11,5 +13,9 @@ public class ExceptFilterPipe<S> extends CollectionFilterPipe<S> {
 
     public ExceptFilterPipe(final Collection<S> storedCollection) {
         super(storedCollection, Filter.NOT_EQUAL);
+    }
+
+    public ExceptFilterPipe(final AsMap asMap, final String... namedSteps) {
+        super(Filter.NOT_EQUAL, asMap, namedSteps);
     }
 }
